# entropy

./: README.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  constants.ts  index.css  notification.html  translations.ts  types.ts
src-tauri/: Cargo.toml  cargo_error.txt  runtime_error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/: LiquidView.tsx  MiniView.tsx  MirrorView.tsx  NotificationToast.tsx  PlanView.tsx  SettingsView.tsx  Sidebar.tsx  SolidView.tsx  TitleBar.tsx
src/hooks/: useTauriStorage.ts
src/utils/: notification.ts
